# penguclip

./: .gitignore  LICENSE  README.md  index.html  install.sh  package.json  pnpm-lock.yaml  prompt.md  reinstall.sh
.hermes/plans/: 2026-05-16_144500-penguclip-implementation.md
src/: App.css  App.tsx  tauri-api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  config.rs  encoder.rs  hotkey.rs  ipc.rs  lib.rs  main.rs  notify.rs  ring_buffer.rs
src/components/: ClipsViewer.tsx  HotkeyRecorder.tsx  LogoPlaceholder.tsx  MainDashboard.tsx  SettingsPanel.tsx  SetupWizard.tsx  StatusBar.tsx
